# VideoStream

./: .gitignore  CMakeLists.txt  LICENSE
src/: ThreadCam.cpp  Threadcam.h  main.cpp
